<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:key="first_preferencescreen">
	<PreferenceCategory android:title="@string/ui_settings_label" android:order="1">
		<EditTextPreference android:key="login_user"
			android:title="@string/ui_login_label"
			android:summary="@string/ui_login_desc"
			android:singleLine="true"
			android:dialogMessage="@string/ui_login_dialog_msg"
			android:persistent="true"/>
		<EditTextPreference android:key="login_password"
			android:title="@string/ui_password_label"
			android:summary="@string/ui_password_desc"
			android:singleLine="true"
			android:password="true"
			android:dialogMessage="@string/ui_password_dialog_msg"
			android:persistent="true"/>
		<EditTextPreference android:key="imap_folder"
			android:title="@string/ui_imap_folder_label"
			android:summary="@string/ui_imap_folder_desc"
			android:singleLine="true"
			android:dialogMessage="@string/ui_imap_folder_label_dialog_msg"
			android:persistent="true"
			android:defaultValue="SMS"/>
		<CheckBoxPreference android:key="enable_auto_sync"
			android:title="@string/ui_enable_auto_sync_label"
			android:summary="@string/ui_enable_auto_sync_desc"
			android:persistent="true"
			android:defaultValue="true"/>
	</PreferenceCategory>
</PreferenceScreen>
